--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>{{title}}</title>
-    <body>
+    </head>
+<body>
 
-        {% block content %}
-        {% endblock %}
-    
-    </body>
-    </html>
+    {% block content %}
+    {% endblock %}
+
+</body>
+</html>
