--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,18 @@
 <html>
     <head>
         <title>{{title}}</title>
+    <style>
+        .error {color:orange;}
+    </style>
     </head>
 <body>
-
+    {% with messages = get_flashed_messages(with_categories=True) %}
+    <ul>
+    {% for category,message in messages %}
+        <li class="{{category}}">{{message}}</li>
+    {% endfor %}
+    </ul>
+{% endwith %}
     {% block content %}
     {% endblock %}
 
